--- a/Youtube Old Layout.user.css
+++ b/Youtube Old Layout.user.css
@@ -6,16 +6,17 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.3.3
+@version        1.3.4
 @license        MIT
 @preprocessor   stylus
 
-@advanced checkbox ratio_bar "(Beta) Ratio Bar" 1
-@advanced select homepage_videos "⚒️ Custom Homepage" ["Enabled", "Disabled"]
 @advanced range custom_homepage_videos'🏠 Number Of Videos Per Row' [6, 1, 10, 1]
-@advanced select like_dislike_color "⚒️ Custom Like/Dislike Color" ["Enabled", "Disabled"]
-@advanced color like_color "👍 Custom Like Color" #3ea6ff
-@advanced color dislike_color "👎 Custom Dislike Color" #3ea6ff
+@advanced select ratio_bar "⚒️ Display Ratio Bar (Beta) " ["Enabled", "Disabled"]
+@advanced color like_rb_color "🎨 Like Ratio Color" #32CD32
+@advanced color dislike_rb_color "🎨 Dislike Ratio Color" #FF0000
+@advanced select like_dislike_color "⚒️ Custom Like/Dislike Button Color" ["Enabled", "Disabled"]
+@advanced color like_color "👍 Like Button Color" #3ea6ff
+@advanced color dislike_color "👎 Dislike Button Color" #3ea6ff
 
 @advanced checkbox old-dark-theme "🌑 Dark Navigation Bars" 0
 @advanced checkbox remove-bg-playlist "❌ Remove Background Playlists" 0
@@ -38,50 +39,26 @@ Support me: https://ko-fi.com/sapondanaisriwan
 */
 @-moz-document domain("youtube.com") {
 
-
-    ytd-watch-metadata {
-        display: none !important;
+    :root {
+        --sub-red-btn: #CC0000;
+        --sub-white--text-btn: #F2F2F2;
+        --sub-black-bg-btn: #303030;
     }
 
-    if (homepage_videos=="Enabled") {
-        /* Watch page */
-        /* Makes the container/spacing disappear */
-        ytd-rich-grid-renderer #contents {
-            ytd-rich-grid-row,
-            ytd-rich-grid-row #contents {
-                display: contents;
-            }
+    /* Watch page */
+    /* Makes the container/spacing disappear */
+    ytd-rich-grid-renderer #contents {
+        ytd-rich-grid-row,
+        ytd-rich-grid-row #contents {
+            display: contents;
         }
-
-        [page-subtype="home"] ytd-rich-grid-renderer {
-            --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
-        }
-
-        #home-page-skeleton .rich-shelf-videos,
-        #home-page-skeleton #home-container-media {
-            margin: 0 auto;
-            transform: translate(20px, -2px);
-        }
-
-        ytd-rich-grid-renderer {
-            position: relative !important;
-            display: flex !important;
-            flex-direction: column !important;
-            align-items: center !important;
-        } // ytd-rich-grid-row #contents {
-        //     margin: 10px 0 0 2%;
-        //     flex-grow: 1;
-        //     width: calc(25% * (1/6) - 10px - 1px);
-        // }
-        // #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
-        // #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
-        //     flex-basis: calc(100%/6 - 16px - 0.01px);
-        //     min-width: calc(100%/6 - 16px - 0.01px);
-        //     max-width: calc(100%/6 - 16px - 0.01px);
-        // }
     }
 
-    if (ratio_bar) {
+    [page-subtype="home"] ytd-rich-grid-renderer {
+        --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
+    }
+
+    if (ratio_bar=="Enabled") {
 
         ytd-watch-metadata {
             display: block !important;
@@ -151,17 +128,16 @@ Support me: https://ko-fi.com/sapondanaisriwan
             flex-direction: column-reverse !important;
         }
         #ryd-bar {
-            background: lime !important;
+            background: like_rb_color
         }
         #ryd-bar-container {
-            background: red !important;
+            background: dislike_rb_color
         }
     }
-
-    :root {
-        --sub-red-btn: #CC0000;
-        --sub-white--text-btn: #F2F2F2;
-        --sub-black-bg-btn: #303030;
+    else {
+        ytd-watch-metadata {
+            display: none !important;
+        }
     }
 
     /* Custom like/dislike color */
