--- a/Youtube Old Layout.user.css
+++ b/Youtube Old Layout.user.css
@@ -46,19 +46,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --sub-black-bg-btn: #303030;
     }
 
-    /* Home page */
-    /* Makes the container/spacing disappear */
-    ytd-rich-grid-renderer #contents {
-        ytd-rich-grid-row,
-        ytd-rich-grid-row #contents {
-            display: contents;
-        }
-    }
-
-    [page-subtype="home"] ytd-rich-grid-renderer {
-        --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
-    }
-
     /* Ratio bar works with "Return Youtube Dislike" */
     if (ratio_bar=="Enabled") {
 
@@ -67,7 +54,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             margin-top: 20px !important;
         }
 
-        
+
         h1.ytd-watch-metadata {
             font-family: "Roboto", sans-serif;
             font-weight: 400 !important;
@@ -657,6 +644,20 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
     #hearted-border.ytd-creator-heart-renderer {
         right: 9px !important;
+    }
+
+    /* Home page */
+    /* Makes the container/spacing disappear */
+    ytd-rich-grid-renderer #contents {
+        ytd-rich-grid-row,
+        ytd-rich-grid-row #contents {
+            display: contents;
+        }
+    }
+
+    /* Custom videos per row on homepage */
+    [page-subtype="home"] ytd-rich-grid-renderer {
+        --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
     }
 
     /*  Youtube fog kids */
