Rename "Youtube old layout" to "AdashimaaTube"

--- a/AdashimaaTube.css
+++ b/AdashimaaTube.css
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name           Youtube Old Layout
+@name           AdashimaaTube
 @author         sapondanaisriwan(Adashima#4066)
 @description    `new youtube layout is bad`
 @namespace      https://userstyles.world/user/sapondanaisriwan
