revert youtube playlist

--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,14 +6,14 @@
 @homepageURL    https://github.com/sapondanaisriwan/Youtube-Old-Layout
 @supportURL     https://github.com/sapondanaisriwan/Youtube-Old-Layout/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.3.6
+@version        1.3.7
 @license        MIT
 @preprocessor   stylus
 
 @advanced range custom_homepage_videos'🏠 Number Of Videos Per Row' [6, 1, 10, 1]
-@advanced range increase_font_size "⚙️ Font Size (px)" [0, 0, 4, 1, 'px']
-@advanced number custom_border_radius "⚙️ Border Radius (px)" [0, 0, 24, 1, 'px']
-@advanced select ratio_bar "⚒️ Display Ratio Bar (Beta) " ["Enabled", "Disabled"]
+@advanced range increase_font_size "⚙️ Increase Font Size" [0, 0, 4, 1, 'px']
+@advanced range custom_border_radius "⚙️ Border Radius" [0, 0, 24, 1, 'px']
+@advanced select ratio_bar "⚒️ Display Ratio Bar (Beta)" ["Enabled", "Disabled"]
 @advanced color like_rb_color "  🎨 Like Ratio Color" #32CD32
 @advanced color dislike_rb_color "  🎨 Dislike Ratio Color" #FF0000
 @advanced select like_dislike_color "⚒️ Custom Like/Dislike Button Color" ["Enabled", "Disabled"]
@@ -39,14 +39,18 @@ Support me: https://ko-fi.com/sapondanaisriwan
 Support me: https://ko-fi.com/sapondanaisriwan
 Support me: https://ko-fi.com/sapondanaisriwan
 */
-
 @-moz-document domain("youtube.com") {
 
     :root {
         --increase-text: increase_font_size;
+        --video-per-row: custom_homepage_videos;
         --sub-red-btn: #CC0000;
         --sub-white--text-btn: #F2F2F2;
         --sub-black-bg-btn: #303030;
+    }
+
+    ytd-rich-grid-row[mini-mode] #contents.ytd-rich-grid-row {
+        max-width: calc(var(--video-per-row) * (var(--ytd-rich-grid-mini-item-max-width) + var(--ytd-rich-grid-item-margin)));
     }
 
     /* Ratio bar works with "Return Youtube Dislike" */
@@ -217,7 +221,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     if (display-full-title) {
         ytd-rich-grid-media[mini-mode] #video-title.ytd-rich-grid-media,
         #video-title.ytd-compact-video-renderer,
-        #video-title.ytd-rich-grid-media {
+        #video-title.ytd-rich-grid-media,
+        ytd-grid-video-renderer #video-title.yt-simple-endpoint.ytd-grid-video-renderer {
             display: inline !important;
         }
     }
@@ -225,8 +230,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* Center the search results */
     if (fix-search-results) {
         ytd-two-column-search-results-renderer {
-            align-items: center;
-            margin: 0 auto !important;
+            align-items: center; // margin: 0 auto !important;
         }
     }
 
@@ -664,6 +668,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     /* Increase font size */
+    #channel-name.ytd-c4-tabbed-header-renderer {
+        font-size: calc(2.4rem + var(--increase-text)) !important;
+    }
+
     /* view count */
     ytd-video-view-count-renderer[small]/* upload date */
     #info-strings.ytd-video-primary-info-renderer,
@@ -674,12 +682,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     /* comment section */
     #content-text.ytd-comment-renderer,
-    
+
     yt-formatted-string[has-link-only_]:not([force-default-style]) a.yt-simple-endpoint.yt-formatted-string,
-    
+
     /* description */
-    ytd-expander.ytd-video-secondary-info-renderer
-    {
+    ytd-expander.ytd-video-secondary-info-renderer {
         font-size: calc(1.4rem + var(--increase-text)) !important;
     }
 
@@ -687,16 +694,13 @@ Support me: https://ko-fi.com/sapondanaisriwan
     #super-title.ytd-watch-metadata,
     /* channel name*/
     ytd-video-meta-block:not([rich-meta]) #byline-container.ytd-video-meta-block,
-    #text.ytd-channel-name,
 
     /* view count and upload date */
     ytd-video-meta-block:not([rich-meta])[inline-badges] #metadata-line.ytd-video-meta-block,
     ytd-video-meta-block[rich-meta][mini-mode] #metadata-line.ytd-video-meta-block,
 
     /* subscribers */
-    #owner-sub-count.ytd-video-owner-renderer
-        
-    /* comment section */
+    #owner-sub-count.ytd-video-owner-renderer/* comment section */
     .published-time-text.ytd-comment-renderer {
         // margin-top: var(--increase-text);
         font-size: calc(1.2rem + var(--increase-text)) !important;
@@ -704,7 +708,29 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     #author-text.yt-simple-endpoint.ytd-comment-renderer {
         font-size: calc(1.3rem + var(--increase-text)) !important;
-    } // html, #home-container-media {
+    } 
+
+
+
+    /* Youtube Playlist */
+    ytd-browse[page-subtype=playlist][amsterdam] {
+        padding-top: 0 !important;
+    }
+
+    ytd-browse[page-subtype=playlist][amsterdam] ytd-playlist-header-renderer.ytd-browse {
+        margin-left: 0 !important;
+    }
+    
+    .immersive-header-container.ytd-playlist-header-renderer {
+        border-radius: 0 !important;
+    }
+    
+    #page-manager > ytd-browse > ytd-playlist-header-renderer > div > div.immersive-header-background-wrapper.style-scope.ytd-playlist-header-renderer > div {
+        background: #181818 !important;
+    }
+    
+
+    // html, #home-container-media {
     //     --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
     // }
     /*  Youtube fog kids */
