revert youtube playlist

--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -719,10 +719,16 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     ytd-browse[page-subtype=playlist][amsterdam] ytd-playlist-header-renderer.ytd-browse {
         margin-left: 0 !important;
+        height: calc(100vh - var(--ytd-toolbar-height));
     }
     
     .immersive-header-container.ytd-playlist-header-renderer {
+        margin-bottom: 0 !important;
         border-radius: 0 !important;
+    }
+
+    ytd-playlist-header-renderer {
+        width: 380px !important;
     }
     
     #page-manager > ytd-browse > ytd-playlist-header-renderer > div > div.immersive-header-background-wrapper.style-scope.ytd-playlist-header-renderer > div {
